examples/type_errors/extra_data_field.roto
filter foo {
	define {
		rx msg: RouteStatus;
	}

	term bar {
		match msg with {
			Stale(x) -> true, // should error here
		} 
	}
}
